test2/k8s/istio-debug/pilot-gateway.yaml
# Set of configs - s/control.istio.webinf.info/your.domain/

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-autogenerated-k8s-ingress
  namespace: istio-system
  labels:
    release: istio
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      protocol: HTTP2
      name: http
    hosts:
    - "*"
#  - port:
#      number: 443
#      protocol: HTTPS
#      name: https-default
#    tls:
#      mode: SIMPLE
#      serverCertificate: /etc/istio/ingress-certs/tls.crt
#      privateKey: /etc/istio/ingress-certs/tls.key
#    hosts:
#    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingressgateway
  namespace: istio-system
  labels:
    release: istio
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        protocol: HTTP2
        name: http
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pilot-ingress
  namespace: istio-system
  labels:
    release: istio
spec:
  hosts:
    - pilot1.is11.istio.webinf.info
  gateways:
    - ingressgateway
  http:
    - route:
        - destination:
            host: istio-pilot.istio-system.svc.cluster.local
            port:
              number: 8080

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pilot-ingress-control
  namespace: istio-debug
  labels:
    release: istio-debug
spec:
  hosts:
    - pilotcontrol.35.222.25.73.nip.io
    - pilotcontrol.control.istio.webinf.info
    - pilotcontrol.is11.istio.webinf.info
    - pilotcontrol.r11.istio.webinf.info
    - pilotcontrol.w10.istio.webinf.info
  gateways:
    - istio-ingress/ingressgateway
    - istio-system/ingressgateway
    - istio-gateway/ingressgateway
    - istio-master/ingressgateway
  http:
    - route:
        - destination:
            host: istio-pilot.istio-control.svc.cluster.local
            port:
              number: 8080

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pilot-ingress
  namespace: istio-debug
  labels:
    release: istio-debug
spec:
  hosts:
    - pilotsystem.control.istio.webinf.info
    - pilotsystem.is11.istio.webinf.info
    - pilotsystem.r11.istio.webinf.info
    - pilotsystem.w10.istio.webinf.info
  gateways:
    - istio-ingress/ingressgateway
    - istio-system/ingressgateway
    - istio-gateway/ingressgateway
    - istio-master/ingressgateway
  http:
    - route:
        - destination:
            host: istio-pilot.istio-system.svc.cluster.local
            port:
              number: 8080

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pilot-kingress
  namespace: istio-debug
  labels:
    release: istio-debug
spec:
  hosts:
    - pilotkingress.control.istio.webinf.info
    - pilotkingress.is11.istio.webinf.info
    - pilotkingress.r11.istio.webinf.info
    - pilotkingress.w10.istio.webinf.info
  gateways:
    - istio-ingress/ingressgateway
    - istio-system/ingressgateway
    - istio-gateway/ingressgateway
    - istio-master/ingressgateway
  http:
    - route:
        - destination:
            host: istio-pilot.istio-ingress.svc.cluster.local
            port:
              number: 8080

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pilot-master
  namespace: istio-debug
  labels:
    release: istio-debug
spec:
  hosts:
  - pilotmaster.control.istio.webinf.info
  - pilotmaster.is11.istio.webinf.info
  - pilotmaster.r11.istio.webinf.info
  - pilotmaster.w10.istio.webinf.info
  gateways:
  - istio-ingress/ingressgateway
  - istio-system/ingressgateway
  - istio-gateway/ingressgateway
  - istio-master/ingressgateway
  http:
  - route:
    - destination:
        host: istio-pilot.istio-master.svc.cluster.local
        port:
          number: 8080


---
## Ingress style - with class and without class

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pilotingress
spec:
  rules:
    - host: pilotingress.control.istio.webinf.info
      http:
        paths:
          - path: /.*
            backend:
              serviceName: pilot
              servicePort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pilotingressctl
  annotations:
    kubernetes.io/ingress.class: istio
spec:
  rules:
    - host: pilotingressctl.control.istio.webinf.info
      http:
        paths:
          - path: /.*
            backend:
              serviceName: pilot
              servicePort: 15014
